--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Roboto Mono', sans-serif;
   line-height: 1.5;
   color: #2d354c;
-  background-image: radial-gradient(circle at center, #60b3f7, #229be7, #017bbc);
+  background-image: radial-gradient(circle at center, #60b3f7, #38a5e9, #017bbc);
   background-size: 100%;
   animation: gradientAnimation 10s ease-in-out infinite;
 }
@@ -65,7 +65,11 @@ table input[type='number'] {
 
 .btn-success,
 .btn-remove {
-  color: #fff;
+  color: #00000080;
+}
+#remove-btn {
+  width: calc(81%);
+ 
 }
 
 .btn-success {
